--- a/Project-4/NewRome/templates/light_web.html
+++ b/Project-4/NewRome/templates/light_web.html
@@ -3,7 +3,7 @@
 {% block content %}
     <style>
         body {
-          background-image: url('https://knightstemplar.co/wp-content/uploads/2023/07/Medieval-Blacksmiths.jpg');
+          background-image: url('https://israelmyglory.org/wp-content/uploads/2023/06/TheSermonontheMount.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
